--- a/abandonauth/templates/index.html
+++ b/abandonauth/templates/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>AbandonAuth</title>
 </head>
-<body>
-$END$
-</body>
+    <body>
+        <div>
+            {% if authenticated %}
+                <button onclick="deleteAuthCookie()">Logout</button>
+            {% else %}
+                <a href={{ discord_redirect }}>Login</a>
+            {% endif %}
+        </div>
+
+        <script>
+            function deleteAuthCookie(){
+                document.cookie = "Authorization" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+                location.reload();
+            }
+        </script>
+    </body>
 </html>
