add link to docs on index page

--- a/abandonauth/templates/index.html
+++ b/abandonauth/templates/index.html
@@ -5,6 +5,7 @@
     <title>AbandonAuth</title>
 </head>
     <body>
+        <a href="/docs">Docs</a>
         <div>
             {% if authenticated %}
                 <button onclick="deleteAuthCookie()">Logout</button>
