Add header message for temp UI

--- a/abandonauth/templates/index.html
+++ b/abandonauth/templates/index.html
@@ -5,6 +5,7 @@
     <title>AbandonAuth</title>
 </head>
     <body>
+    <h3>Abandon Auth Developer UI</h3>
         <a href="/docs">Docs</a>
         <div>
             {% if authenticated %}
