Create separate login and developer login pages, add alert banner styling
This separation will be important since the developer login will use the login flow of the new login page. The alert banners are to help with debugging, though we will want some type error alerting for users, we should probably do this a bit nicer.

--- a/abandonauth/static/styles.css
+++ b/abandonauth/static/styles.css
@@ -12,6 +12,20 @@ body {
     margin: 0;
 }
 
+.alert-container {
+  position: absolute;
+  top: 5px;
+  width: 50vw;
+  font-size: 1.75rem;
+}
+
+.error-banner {
+  padding: 10px;
+  color: white;
+  background-color: #e65449;
+  margin-top: 10px;
+}
+
 button:hover {
     cursor: pointer;
 }
