add UI for developer application list, detail, and creation pages
We still need to implement the update and delete logic for developer applications as well as create a very simple navbar for navigating back to the home page.

--- a/abandonauth/static/styles.css
+++ b/abandonauth/static/styles.css
@@ -73,6 +73,10 @@ footer {
     width: 66vw;
 }
 
+#warning-text {
+  color: rgb(234 88 12);
+}
+
 button[id^="login-"] {
     color: var(--White);
     border-radius: 10px;
