--- a/abandonauth/templates/index.html
+++ b/abandonauth/templates/index.html
@@ -10,6 +10,13 @@
         <div id="header">
             <h1 id="title">AbandonAuth</h1>
             <h2 id="subtitle">Developer Dashboard</h2>
+            <h1 id="userInfo">{{ username }}: {{ user_id }}</h1>
+        </div>
+
+        <div>
+            <a href="/ui/applications">
+                Developer Applications
+            </a>
         </div>
         <!-- used for developing, will be removed in future -->
         <div style="display: flex; gap: 5vw">
