--- a/abandonauth/templates/created_application_info.html
+++ b/abandonauth/templates/created_application_info.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>AbandonAuth</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
-</head>
-<body>
-    <div>
+{% extends "base.html" %}
+{% block content %}
+{% include "navbar.html" %}
+    <div class="mainApp">
         <p>Application ID: {{ dev_app_id }}</p>
         <p>Application Token: {{ dev_app_token }}</p> <span id="warning-text">Warning! This secret key will never be visible again, please store it somewhere safe.</span>
     </div>
-</body>
-</html>
+{% endblock %}
