--- a/abandonauth/templates/create_developer_app.html
+++ b/abandonauth/templates/create_developer_app.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>AbandonAuth</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
-</head>
-<body>
-    <div id="content">
+{% extends "base.html" %}
+{% block content %}
+{% include "navbar.html" %}
+    <div class="mainApp">
         <form method="post">
-            <button>Create Application</button>
+            <button class="button" style="margin-top: 2em;">Create Application</button>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
