--- a/abandonauth/templates/delete_dev_app_confirmation.html
+++ b/abandonauth/templates/delete_dev_app_confirmation.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>AbandonAuth</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
-</head>
-<body>
-    <div>
+{% extends "base.html" %}
+{% block content %}
+{% include "navbar.html" %}
+    <div class="mainApp">
         <p>Are you sure you would like to permanently delete the application {{ dev_app_id }} ?</p>
         <form method="post">
             <button>Yes</button>
             <a href="/ui/applications/{{ dev_app_id }}">No</a>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
