--- a/abandonauth/templates/edit_callback_uris.html
+++ b/abandonauth/templates/edit_callback_uris.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>AbandonAuth</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
-</head>
-<body>
-    <div>
+{% extends "base.html" %}
+{% block content %}
+{% include "navbar.html" %}
+    <div class="mainApp">
         <p>Application ID: {{ dev_app_id }}</p>
         <p>Callback URIs:</p>
         <ul>
@@ -21,5 +16,4 @@
             <button>Submit</button>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
