--- a/abandonauth/templates/login.html
+++ b/abandonauth/templates/login.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>AbandonAuth</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
-</head>
-<body>
-    <div id="content">
+{% extends "base.html" %}
+{% block content %}
+    <div id="loginContent">
         {% if errors %}
         <div class="alert-container">
             {% for error in errors %}
@@ -39,5 +33,4 @@
             </button>
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
