--- a/abandonauth/templates/delete_dev_app_confirmation.html
+++ b/abandonauth/templates/delete_dev_app_confirmation.html
@@ -4,8 +4,8 @@
     <div class="mainApp">
         <p>Are you sure you would like to permanently delete the application {{ dev_app_id }} ?</p>
         <form method="post">
-            <button>Yes</button>
-            <a href="/ui/applications/{{ dev_app_id }}">No</a>
+            <button class="button-warning">Yes</button>
+            <a class="button-danger" href="/ui/applications/{{ dev_app_id }}">No</a>
         </form>
     </div>
 {% endblock %}
