--- a/abandonauth/templates/developer_app_info.html
+++ b/abandonauth/templates/developer_app_info.html
@@ -2,21 +2,23 @@
 {% block content %}
 {% include "navbar.html" %}
     <div class="mainApp">
-        <p>Application ID: {{ dev_app_id }}</p>
-        <p>Owner ID: {{ owner_id }}</p>
-        <p>Callback URIs:</p>
-        <ul>
-            {% for uri in callback_uris %}
-                <li>{{ uri }}</li>
-            {% endfor %}
+        <div class="appInfo">
+            <p>Application ID: {{ dev_app_id }}</p>
+            <p>Owner ID: {{ owner_id }}</p>
+            <p>Callback URIs:</p>
+            <ul>
+                {% for uri in callback_uris %}
+                    <li>{{ uri }}</li>
+                {% endfor %}
 
-        </ul>
+            </ul>
 
-        <div>
-            <a href="/ui/applications/{{ dev_app_id }}/edit_callback_uris">Edit Callback URIs</a>
+            <div class="devAppButtonGroup">
+                <a class="button-info" href="/ui/applications/{{ dev_app_id }}/edit_callback_uris">Edit Callback URIs</a>
+                <a class="button-warning" href="/ui/applications/{{ dev_app_id }}/reset_token">Reset Token</a>
+                <a class="button-danger" href="/ui/applications/{{ dev_app_id }}/delete_application">Delete Application</a>
+            </div>
         </div>
 
-        <a href="/ui/applications/{{ dev_app_id }}/reset_token">Reset Token</a>
-        <a href="/ui/applications/{{ dev_app_id }}/delete_application">Delete Application</a>
     </div>
 {% endblock %}
