--- a/abandonauth/templates/edit_callback_uris.html
+++ b/abandonauth/templates/edit_callback_uris.html
@@ -11,9 +11,16 @@
 
         </ul>
         <form method="post">
-            <label for="new_callback_uris">New Callback URIs</label>
+            <div class="editCallbackForm">
+                <label for="new_callback_uris">New Callback URIs</label>
             <input type="text" id="new_callback_uris" name="new_callback_uris" value="{{ callback_uris_form_value }}">
-            <button>Submit</button>
+            <button class="button-submit">Submit</button>
+            </div>
         </form>
+
+        <div class="noteText">
+            <p>Callback URIs is a comma separated value of all valid callback URIs your application allows.</p>
+            <p>Example: realwebsite.fake/callback,anothersite.fake/api,localhost:8000/callback/uri</p>
+        </div>
     </div>
 {% endblock %}
