--- a/abandonauth/templates/index.html
+++ b/abandonauth/templates/index.html
@@ -3,8 +3,7 @@
 {% include "navbar.html" %}
     <div class="mainApp">
         <div id="header">
-            <h1 id="title">AbandonAuth</h1>
-            <h2 id="subtitle">Developer Dashboard</h2>
+            <h1 id="title">Developer Dashboard</h1>
             <h1 id="userInfo">{{ username }}: {{ user_id }}</h1>
         </div>
     </div>
