add authenticated logic to all template endpoints, add target=_blank

--- a/abandonauth/templates/navbar.html
+++ b/abandonauth/templates/navbar.html
@@ -3,7 +3,7 @@
     <ul>
         <li><a href="/ui">Home</a></li>
         <li><a href="/ui/applications">Developer Applications</a></li>
-        <li><a href="/docs">Docs</a></li>
+        <li><a href="/docs" target="_blank">Docs</a></li>
         {% if authenticated %}
             <li>
                 <a href='javascript:;' onclick="deleteAuthCookie()">Logout</a>
