--- a/abandonauth/static/styles.css
+++ b/abandonauth/static/styles.css
@@ -12,6 +12,28 @@ body {
     margin: 0;
 }
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  background: var(--Discord);
+}
+
+.navbar ul {
+  display: flex;
+  list-style: none;
+}
+
+.navbar li {
+  padding-left: 1rem;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.2em;
+}
+
 .alert-container {
   position: absolute;
   top: 5px;
@@ -34,7 +56,109 @@ footer {
     bottom: 0;
 }
 
-#content {
+.mainApp {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.devAppButtonGroup {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1em;
+}
+
+.devAppButtonGroup a {
+  width: 150px;
+}
+
+.noteText {
+  font-size: 0.75rem;
+}
+
+.editCallbackForm {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1em;
+}
+
+.button-submit {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 3px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button {
+  background-color: #04AA6D; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button-info {
+  background-color: #4092b3;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button-warning {
+  background-color: #b39e40;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button-danger {
+  background-color: #b34040;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.developerApps {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.developerApps a {
+    color: white;
+    font-size: 2rem;
+}
+
+.appInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#loginContent {
     display: flex;
     height: 100vh;
     flex-direction: column;
@@ -71,6 +195,10 @@ footer {
     height: 33vh;
 
     width: 66vw;
+}
+
+#warning-text {
+  color: rgb(234 88 12);
 }
 
 button[id^="login-"] {
