--- a/abandonauth/templates/developer_apps.html
+++ b/abandonauth/templates/developer_apps.html
@@ -6,7 +6,7 @@
 
         <div class="developerApps">
             {% for app in dev_apps %}
-                <a href="/ui/applications/{{ app }}">{{ app }}</a>
+                <a href="/ui/applications/{{ app['id'] }}">{{ app['name'] }}: {{ app['id'] }}</a>
             {% endfor %}
         </div>
     </div>
